--- a/thoriumonline/thorium.html
+++ b/thoriumonline/thorium.html
@@ -187,7 +187,7 @@ Bibliography and Further Reading
   First functioning prototype of a MSRE at Oak Ridge Laboratories, 1963
 	</div>
 			<div class="temp"  onClick="changeHeight2();" id="temp2">
-			<img src="images/SOFIE.gif" class="ttt"></img>
+			<img src="images/SOFIE.jpg" class="ttt"></img>
 			Cult follower Rosie performing a light ritual, posted in <span>pro-test.</span>
 			</div>
 			<div class="temp"  onClick="changeHeight4();" id="temp4">
