--- a/internship/index.html
+++ b/internship/index.html
@@ -91,11 +91,11 @@ presents while supporting artists and charities, 2k40 - a campagin aimed at teen
       <p id="pp"> <a href="http://whatdaniela.online/epost.html">The Postcard Project</a> is an archive of postcards made by
          Studio Just. I had to come up ith a fun way to digitally showcase them and then make it happen.
         You can visit the website temporarily hosted <a href="http://whatdaniela.online/epost.html">here.</a>
-      </p><img class="imge" src="post.gif"alt=""/>
+      </p><img class="imge" src="post-small.gif"alt=""/>
       <p> Using matter.js libary to make a physicsengine within a browser!
-      </p><img class="imge" src="niaga.gif"alt=""/>
+      </p><img class="imge" src="niaga-small.gif"alt=""/>
       <p> Part of an instagaram advert looking:
-      </p><img class="imge" src="advt.gif"alt=""/>
+      </p><img class="imge" src="advt-small.gif"alt=""/>
     </div>
     <div class="minic f no" onclick="select();">
       <h1>Conclusion</h1>
